--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,10 @@
   max-width: 90% !important;
 }
 
+.navbar{
+  padding: 1rem 4rem 1rem 4rem;
+}
+
 .page-change-button {
   display: inline-block;
   padding: 10px 20px;
