--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,9 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
 
+h1{
+  padding: 1rem 1rem 1rem 0;
+}
+
 .bi{
   margin-left: 2rem;
   line-height: 1;
@@ -23,6 +27,54 @@
 .navbar{
   padding: 1rem 4rem 1rem 4rem;
   margin-bottom: 1rem;
+}
+
+.del {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease;
+}
+
+.del:hover{
+  background-color: #a04545;
+}
+
+.btn-c{
+  background-color: #4CAF50;
+  color: white;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: bold;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease;
+}
+
+.btn-c:hover{
+  background-color: #449f47;
+}
+
+.btn-c.no-bg{
+  background-color: white;
+  color: black;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: bold;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease;
+}
+
+.btn-c.no-bg:hover{
+  background-color: rgb(210, 210, 210);
 }
 
 .page-change-button {
@@ -68,7 +120,6 @@
   font-size: 18px;
 }
 
-/* Responsive Design */
 @media (max-width: 600px) {
   .page-change-button {
       width: 100%;
